correcting my css file and image folder

--- a/projrct1.html
+++ b/projrct1.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="project1.css" />
   </head>
   <body>
     <header>
@@ -71,7 +71,7 @@
     <div class="programs gym-container">
       <div class="program_list">
         <h2>CHOOSE <span>PROGRAM</span></h2>
-        <img src="/project/line-dec.png" alt="wave" class="wave" />
+        <img src="/images/line-dec.png" alt="wave" class="wave" />
         <p>
           Training Studio is free CSS template for gyms and fitness centers. You
           allowed to use this layout for your business website.
@@ -82,7 +82,7 @@
       <div class="fitnes">
         <div class="icons">
           <div class="icon">
-            <img src="/project/features-first-icon.png" alt="" />
+            <img src="/images/features-first-icon.png" alt="" />
           </div>
           <div class="icon_detial">
             <h2>Basic Fitness</h2>
@@ -95,7 +95,7 @@
         </div>
         <div class="icons">
           <div class="icon">
-            <img src="/project/features-first-icon.png" alt="" />
+            <img src="/images/features-first-icon.png" alt="" />
           </div>
           <div class="icon_detial">
             <h2>Basic Fitness</h2>
@@ -108,7 +108,7 @@
         </div>
         <div class="icons">
           <div class="icon">
-            <img src="/project/features-first-icon.png" alt="" />
+            <img src="/images/features-first-icon.png" alt="" />
           </div>
           <div class="icon_detial">
             <h2>Basic Fitness</h2>
@@ -121,7 +121,7 @@
         </div>
         <div class="icons">
           <div class="icon">
-            <img src="/project/features-first-icon.png" alt="" />
+            <img src="/images/features-first-icon.png" alt="" />
           </div>
           <div class="icon_detial">
             <h2>Basic Fitness</h2>
@@ -134,7 +134,7 @@
         </div>
         <div class="icons">
           <div class="icon">
-            <img src="/project/features-first-icon.png" alt="" />
+            <img src="/images/features-first-icon.png" alt="" />
           </div>
           <div class="icon_detial">
             <h2>Basic Fitness</h2>
@@ -147,7 +147,7 @@
         </div>
         <div class="icons">
           <div class="icon">
-            <img src="/project/features-first-icon.png" alt="" />
+            <img src="/images/features-first-icon.png" alt="" />
           </div>
           <div class="icon_detial">
             <h2>Basic Fitness</h2>
@@ -240,7 +240,7 @@
     <div class="programs gym-container">
       <div class="program_list">
         <h2>OUR <span>CLASSES</span></h2>
-        <img src="/project/line-dec.png" alt="wave" class="wave" />
+        <img src="/images/line-dec.png" alt="wave" class="wave" />
         <p>
           Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed
           viverra ipsum dolor, ultricies fermentum massa consequat eu.
@@ -251,25 +251,25 @@
       <div class="list_prog">
         <div class="class_list">
           <div class="lists">
-            <img src="/project/tabs-first-icon.png" alt="" />
+            <img src="/images/tabs-first-icon.png" alt="" />
           </div>
           <a href="">First Training Class</a>
         </div>
         <div class="class_list">
           <div class="lists">
-            <img src="/project/tabs-first-icon.png" alt="" />
+            <img src="/images/tabs-first-icon.png" alt="" />
           </div>
           <a href="">Second Training Class</a>
         </div>
         <div class="class_list">
           <div class="lists">
-            <img src="/project/tabs-first-icon.png" alt="" />
+            <img src="/images/tabs-first-icon.png" alt="" />
           </div>
           <a href="">Third Training Class</a>
         </div>
         <div class="class_list">
           <div class="lists">
-            <img src="/project/tabs-first-icon.png" alt="" />
+            <img src="/images/tabs-first-icon.png" alt="" />
           </div>
           <a href="">Fourth Training Class</a>
         </div>
@@ -279,7 +279,7 @@
       </div>
       <div class="firt_class">
         <div class="fc">
-          <img src="/project/training-image-01.jpg" alt="" />
+          <img src="/images/training-image-01.jpg" alt="" />
         </div>
         <h2>First Training Class</h2>
         <p>
@@ -293,11 +293,11 @@
     </div>
     <div class="programs table_schedules">
       <div class="table_imge">
-        <img src="/project/schedule-bg.jpg" alt="" />
+        <img src="/images/schedule-bg.jpg" alt="" />
       </div>
       <div class="program_table">
         <h2>CLASSES<span> SCHEDULE</span></h2>
-        <img src="/project/line-dec.png" alt="wave" class="wave" />
+        <img src="/images/line-dec.png" alt="wave" class="wave" />
         <p>
           Nunc urna sem, laoreet ut metus id, aliquet consequat magna. <br />Sed
           viverra ipsum dolor, ultricies fermentum massa consequat eu.
@@ -352,7 +352,7 @@
     <div class="program_expert gym-container">
       <div class="program_experts">
         <h2>EXPERT<span> TRAINERS</span></h2>
-        <img src="/project/line-dec.png" alt="wave" class="wave" />
+        <img src="/images/line-dec.png" alt="wave" class="wave" />
         <p>
           Nunc urna sem, laoreet ut metus id, aliquet consequat magna. <br />Sed
           viverra ipsum dolor, ultricies fermentum massa consequat eu.
@@ -360,7 +360,7 @@
       </div>
       <section class="gymer">
         <div class="gymer_one">
-          <img src="/project/first-trainer.jpg" alt="gym" />
+          <img src="/images/first-trainer.jpg" alt="gym" />
           <h5>Strength Trainer</h5>
           <h3>Bret D. Bowers</h3>
           <p>
@@ -377,7 +377,7 @@
       </section>
       <section class="gymer">
         <div class="gymer_second">
-          <img src="/project/second-trainer.jpg" alt="gym" />
+          <img src="/images/second-trainer.jpg" alt="gym" />
           <h5>Muscle Trainer</h5>
           <h3>Hector T. Daigl</h3>
           <p>
@@ -394,7 +394,7 @@
       </section>
       <section class="gymer">
         <div class="gymer_three">
-          <img src="/project/third-trainer.jpg" alt="gym" />
+          <img src="/images/third-trainer.jpg" alt="gym" />
           <h5>Power Trainer</h5>
           <h3>Paul D. Newman</h3>
           <p>
@@ -419,7 +419,7 @@
       </div>
       <div class="gym_form">
         <div class="contact_fom">
-          <img src="/project/contact-bg.jpg" alt="contact" />
+          <img src="/images/contact-bg.jpg" alt="contact" />
         </div>
         <form action="post">
           <fieldset>
