correct of hero video and adding button gym form

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section>
       <div class="hero">
         <video
-          src="https://videos.pexels.com/video-files/4812848/4812848-uhd_2560_1440_25fps.mp4"
+          src="https://templatemo.com/templates/templatemo_548_training_studio/assets/images/gym-video.mp4"
           autoplay
           muted
           loop
@@ -359,7 +359,7 @@
               type="text"
               name="email"
               id="email"
-              placeholder="your email"
+              placeholder="your email" required
             />
           </fieldset>
           <fieldset>
@@ -377,6 +377,7 @@
               placeholder="message"
             ></textarea>
           </fieldset>
+          <button>SEND MESSAGE</button>
         </form>
       </div>
     </div>
